ラテラサイト鉱石とキャスティアライト鉱石を追加。

--- a/src/main/resources/assets/industrialcraft3/lang/ja_jp.json
+++ b/src/main/resources/assets/industrialcraft3/lang/ja_jp.json
@@ -8,5 +8,6 @@
   "item.industrialcraft3.twicecompresssteelplate": "2倍圧縮銅鉄プレート",
 
 
-  "block.industrialcraft3.ratersite_ore":"ボーキサイト鉱石"
+  "block.industrialcraft3.ratersite_ore":"ラテラサイト鉱石",
+  "block.indsutrialcraft3.casstieirte_ore":"キャㇲティアライト鉱石"
 }
