--- a/src/main/resources/assets/industrialcraft3/lang/en_us.json
+++ b/src/main/resources/assets/industrialcraft3/lang/en_us.json
@@ -1,12 +1,11 @@
 {
   "item.industrialcraft3.rawaluminium": "RawBauxite",
-  "item.industrialcraft3.rawcasstierte": "RawCasstierte",
+  "item.industrialcraft3.rawcasstierte": "RawTin",
   "item.industrialcraft3.aluminiumingot": "AluminiumIngot",
   "item.industrialcraft3.casstieriteinogot": "CasstieriteInogot",
   "item.industrialcraft3.steelingot": "SteelIngot",
   "item.industrialcraft3.steelplate": "SteelPlate",
   "item.industrialcraft3.twicecompresssteelplate": "TwiceCompressSteelPlate",
-
-
-  "block.industrialcraft3.ratersite_ore": "RatersiteOre"
+  "block.industrialcraft3.ratersite_ore": "RatersiteOre",
+  "block.indsutrialcraft3.casstieirte_ore": "CasstieirteOre"
 }
