--- a/src/main/resources/assets/industrialcraft3/lang/ja_jp.json
+++ b/src/main/resources/assets/industrialcraft3/lang/ja_jp.json
@@ -9,5 +9,5 @@
 
 
   "block.industrialcraft3.ratersite_ore":"ラテラサイト鉱石",
-  "block.indsutrialcraft3.casstieirte_ore":"キャㇲティアライト鉱石"
+  "block.indsutrialcraft3.casstieirte_ore":"キャスティアライト鉱石"
 }
