アイテム"木製バサミ"を追加

--- a/src/main/resources/assets/industrialcraft3/lang/en_us.json
+++ b/src/main/resources/assets/industrialcraft3/lang/en_us.json
@@ -7,5 +7,6 @@
   "item.industrialcraft3.steelplate": "SteelPlate",
   "item.industrialcraft3.twicecompresssteelplate": "TwiceCompressSteelPlate",
   "block.industrialcraft3.ratersite_ore": "RatersiteOre",
-  "block.indsutrialcraft3.casstieirte_ore": "CasstieirteOre"
+  "block.indsutrialcraft3.casstieirte_ore": "CasstieirteOre",
+  "item.industrialcraft3.wooden_shears": "Wooden Shears" 
 }
